# VoidServer

./: README.md
server/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  void_server
server/server/config/: config.h  config.json  config_loader.h
server/server/controllers/: connection_controller.cpp  connection_controller.h
server/server/middleware/: auth_middleware.cpp  auth_middleware.h
server/server/models/: message.h
server/server/protocol/: protocol.h
server/server/src/: main.cpp  server.cpp  server.h  void_server
server/server/utils/: logger.cpp  logger.h
server/shared/types/: common.h
server/shared/utils/: utils.cpp  utils.h
